deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kolchurin-dev
  labels:
    app.kubernetes.io/name: kolchurin-dev
    app.kubernetes.io/managed-by: kustomize
